--- a/src/main/resources/templates/ai/ai-newAdd.html
+++ b/src/main/resources/templates/ai/ai-newAdd.html
@@ -118,7 +118,7 @@
                                         <div class="modal-body text-center">
                                             <div class="row">
                                                 <div class="col-9 m-0 p-0">
-                                                    <canvas id="chart"></canvas>
+                                                    <canvas id="chart" style="width:90%; height:90%;"></canvas>
                                                 </div>
                                                 <div class="col-3 m-0 p-0">
                                                     <div class="row mb-3">
