--- a/src/main/resources/templates/ai/ai-newAdd.html
+++ b/src/main/resources/templates/ai/ai-newAdd.html
@@ -109,7 +109,7 @@
                                 </div>
                             </div>
                             <div class="modal fade" id="exampleModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
-                                <div class="modal-dialog modal-dialog-centered modal-lg">
+                                <div class="modal-dialog modal-dialog-centered modal-xl">
                                     <div class="modal-content">
                                         <div class="modal-header">
                                             <h1 class="modal-title fs-5" id="exampleModalLabel">설정된 하이퍼 파라미터</h1>
@@ -118,7 +118,7 @@
                                         <div class="modal-body text-center">
                                             <div class="row">
                                                 <div class="col-9 m-0 p-0">
-                                                    <canvas id="chart" style="width:90%; height:90%;"></canvas>
+                                                    <canvas id="chart" style="width:100%; height:100%;"></canvas>
                                                 </div>
                                                 <div class="col-3 m-0 p-0">
                                                     <div class="row mb-3">
