--- a/src/main/resources/templates/ai/ai-newAdd.html
+++ b/src/main/resources/templates/ai/ai-newAdd.html
@@ -117,10 +117,12 @@
                                         </div>
                                         <div class="modal-body text-center">
                                             <div class="row">
-                                                <div class="col-9 m-0 p-0">
+                                                <div class="col m-0 p-0">
                                                     <canvas id="chart" style="width:100%; height:100%;"></canvas>
                                                 </div>
-                                                <div class="col-3 m-0 p-0">
+                                            </div>
+                                            <div class="row">
+                                                <div class="col m-0 p-0">
                                                     <div class="row mb-3">
                                                         <div class="col fs-6 sidebarItem">
                                                             트리의 최대 깊이
