AI 차트 크기 수정완료

--- a/src/main/resources/templates/ai/ai-newAdd.html
+++ b/src/main/resources/templates/ai/ai-newAdd.html
@@ -122,7 +122,7 @@
                                                 </div>
                                             </div>
                                             <div class="row">
-                                                <div class="col m-0 p-0">
+                                                <div class="col mx-5 px-5 mt-5">
                                                     <div class="row mb-3">
                                                         <div class="col fs-6 sidebarItem">
                                                             트리의 최대 깊이
