AI 데이터 파싱 작업 - 2

--- a/src/main/resources/templates/ai/ai-newAdd.html
+++ b/src/main/resources/templates/ai/ai-newAdd.html
@@ -224,7 +224,8 @@
                     index.push(k-2);
                     arr.push(numbers[k]);
                 }
-
+                console.log(arr);
+                console.log(arr.length);
                 const ctx1 = document.getElementById('chart');
 
                 const data1 = {
