AI 차트 테스트 - 2

--- a/src/main/resources/templates/ai/ai-newAdd.html
+++ b/src/main/resources/templates/ai/ai-newAdd.html
@@ -244,7 +244,7 @@
                 const ctx1 = document.getElementById('chart');
 
                 const data1 = {
-                    labels: index,
+                    labels: real,
                     datasets: [{
                         label: '예측 값',
                         type: 'scatter',
