AI 관리 뷰 수정

--- a/src/main/resources/templates/ai/ai-manage.html
+++ b/src/main/resources/templates/ai/ai-manage.html
@@ -35,7 +35,7 @@
                                 <span class="">이름</span>
                             </th>
                             <th scope="col">
-                                <span class="">정확도</span>
+                                <span class="">정확도(%)</span>
                             </th>
                             <th scope="col">
                                 <span>MSE</span>
