--- a/src/main/resources/templates/ai/ai-manage.html
+++ b/src/main/resources/templates/ai/ai-manage.html
@@ -38,7 +38,7 @@
                                 <span class="">정확도(%)</span>
                             </th>
                             <th scope="col">
-                                <span>MSE</span>
+                                <span>MAE</span>
                             </th>
                             <th scope="col">
                                 <span>평균 만족도</span>
